--- a/cipher Vigenere.ui
+++ b/cipher Vigenere.ui
@@ -73,6 +73,12 @@
             <property name="text">
              <string>Русский зык</string>
             </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+            <attribute name="buttonGroup">
+             <string notr="true">buttonGroup_language</string>
+            </attribute>
            </widget>
           </item>
           <item row="0" column="1">
@@ -80,6 +86,12 @@
             <property name="text">
              <string>Зашифровать</string>
             </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+            <attribute name="buttonGroup">
+             <string notr="true">buttonGroup_crypt</string>
+            </attribute>
            </widget>
           </item>
           <item row="1" column="0">
@@ -87,6 +99,9 @@
             <property name="text">
              <string>Английский язык</string>
             </property>
+            <attribute name="buttonGroup">
+             <string notr="true">buttonGroup_language</string>
+            </attribute>
            </widget>
           </item>
           <item row="1" column="1">
@@ -94,6 +109,9 @@
             <property name="text">
              <string>Расшифровать</string>
             </property>
+            <attribute name="buttonGroup">
+             <string notr="true">buttonGroup_crypt</string>
+            </attribute>
            </widget>
           </item>
          </layout>
@@ -112,7 +130,7 @@
          </spacer>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="pushButton_get_res">
           <property name="text">
            <string>Получить результат</string>
           </property>
@@ -127,4 +145,8 @@
  </widget>
  <resources/>
  <connections/>
+ <buttongroups>
+  <buttongroup name="buttonGroup_crypt"/>
+  <buttongroup name="buttonGroup_language"/>
+ </buttongroups>
 </ui>
